# Rust-Trading-System

./: .gitignore  Cargo.toml  DESIGN_DECISIONS.md  LICENCE  README.md
orderbook/: Cargo.toml  README.md
orderbook/src/: lib.rs
orderbook/src/orderbook/: mod.rs  orderbook.rs  response.rs  types.rs
orderbook/src/tests/: delete_order.rs  depth.rs  get_order.rs  limit_order.rs  market_order.rs  mod.rs  modify_order.rs  tests.rs
server/: Cargo.toml  README.md
server/src/: main.rs
server/src/router/: depth.rs  limit_order.rs  market_order.rs  markets.rs  mod.rs  order.rs
server/src/routes/: depth.rs  limit_order.rs  market_order.rs  markets.rs  order.rs
server/src/types/: depth.rs  limit_order.rs  market_order.rs  markets.rs  mod.rs  order.rs
trading_engine/: Cargo.toml  README.md
trading_engine/src/: lib.rs
trading_engine/src/tests/: create_trading_engine.rs  get_markets.rs  limit_order.rs  market_order.rs  mod.rs
trading_engine/src/trading_engine/: mod.rs  trading_engine.rs  types.rs
