[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4"}
hyper = "1.7.0"
serde = {version = "1.0.219",features = ["derive"]}
serde_json = "1.0.143"
tokio = {version = "1.47.1",features = ["full"]}
tower = "0.5.2"
trading_engine={ path = "../trading_engine"}
orderbook ={ path = "../orderbook"}